Fix, no atttributes on hidden input please

--- a/Resources/views/Form/div_layout.html.twig
+++ b/Resources/views/Form/div_layout.html.twig
@@ -52,7 +52,13 @@
 
 {% block genemu_jqueryautocompleter_widget %}
 {% spaceless %}
+    {% set attr = {} %}
+    {% set defaultRequired = required %}
+    {% set required = false %}
+
     {{ block("hidden_widget") }}
+
+    {% set required = defaultRequired %}
 
     {% set id = "autocompleter_" ~ id %}
     {% set full_name = "autocompleter_" ~ full_name %}
